--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:helpers": "node tests/helpers.test.js",
     "test:routes": "node tests/routes.test.js",
     "dev": "nodemon src/server.js",
+    "build:db": "node db/db_build.js",
     "start": "node src/server.js"
   },
   "keywords": [],
