--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "nodemon": "^2.0.2",
     "pg": "^7.18.1"
   },
   "devDependencies": {
